fix vertical align buttons

--- a/src/Button/style.css
+++ b/src/Button/style.css
@@ -26,6 +26,7 @@
     white-space: nowrap;
     text-decoration: none;
     box-sizing: border-box;
+    vertical-align: middle;
 
     &::-moz-focus-inner {
         border: 0;
